--- a/client/style.css
+++ b/client/style.css
@@ -1,6 +1,9 @@
 html, body {
   margin: 0;
-  font-family: monospace;
+  font-family: "Source Serif 4", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   font-size: 16px;
 }
 
