--- a/client/style.css
+++ b/client/style.css
@@ -15,3 +15,19 @@ html, body {
   width: 100%;
   padding: 1rem;
 }
+
+.x-button {
+  all: unset;
+  background: white;
+  cursor: pointer;
+  padding: 0.2rem 0.4rem;
+  display: inline-block;
+  border: solid 2px #333;
+  box-shadow: 0px 3px 0px -2px rgba(0,0,0,0.75);
+  &:disabled {
+    opacity: 0.4;
+    border-color: transparent;
+    box-shadow: none;
+  }
+}
+
